K8s/garages-mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garages-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage-mssql
  template:
    metadata:
      labels:
        app: garage-mssql
    spec:
      containers:
        - name: garage-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: garage-mssqldb
      volumes:
        - name: garage-mssqldb
          persistentVolumeClaim:
            claimName: garage-mssql-claim
        - name: garage-mssql-initdb
          configMap:
            name: garage-mssql-initdb-configmap
