K8s/cars-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carservice
  template:
    metadata:
      labels:
        app: carservice
    spec:
      containers:
        - name: carservice
          image: jecksparr0w/carservice:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: cars-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: carservice
  ports:
  - name: carservice
    protocol: TCP
    port: 80
    targetport: 80
