K8s/cars-mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-mssql
  template:
    metadata:
      labels:
        app: car-mssql
    spec:
      containers:
        - name: car-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: car-mssqldb
      volumes:
        - name: car-mssqldb
          persistentVolumeClaim:
            claimName: car-mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cars-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: car-mssql
  ports:
    - name: car-mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: cars-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: car-mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
