K8s/cars-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: carservice-np-srv
spec:
  selector:
    app: carservice
  ports:
  - name: carservice
    protocol: TCP
    port: 80
    targetPort: 80
