K8s/environment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: environment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environmentservice
  template:
    metadata:
      labels:
        app: environmentservice
    spec:
      containers:
        - name: environmentservice
          image: jecksparr0w/environmentservice:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: environment-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: environmentservice
  ports:
  - name: environmentservice
    protocol: TCP
    port: 80
    targetPort: 80
