K8s/environments-mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: environments-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environment-mssql
  template:
    metadata:
      labels:
        app: environment-mssql
    spec:
      containers:
        - name: environment-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: environment-mssqldb
      volumes:
        - name: environment-mssqldb
          persistentVolumeClaim:
            claimName: environment-mssql-claim
        - name: environment-mssql-initdb
          configMap:
            name: environment-mssql-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: environments-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: environment-mssql
  ports:
    - name: environment-mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: environments-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: environment-mssql
  ports:
    - protocol: TCP
      port: 1469
      targetPort: 1433
