K8s/garages-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garages-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garageservice
  template:
    metadata:
      labels:
        app: garageservice
    spec:
      containers:
        - name: garageservice
          image: jecksparr0w/garageservice:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: garages-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: garageservice
  ports:
  - name: garageservice
    protocol: TCP
    port: 80
    targetPort: 80
