K8s/users-mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mssql
  template:
    metadata:
      labels:
        app: user-mssql
    spec:
      containers:
        - name: user-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1435
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: user-mssqldb
      volumes:
        - name: user-mssqldb
          persistentVolumeClaim:
            claimName: user-mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: users-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: user-mssql
  ports:
    - name: user-mssql
      protocol: TCP
      port: 1435
      targetPort: 1435
