K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /Cars
            pathType: Prefix
            backend:
              service:
                name: cars-clusterip-srv
                port:
                  number: 80
          - path: /Users
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /IndoorEnvironments
            pathType: Prefix
            backend:
              service:
                name: environments-clusterip-srv
                port:
                  number: 80
          - path: /Garages
            pathType: Prefix
            backend:
              service:
                name: garages-clusterip-srv
                port:
                  number: 80
