K8s/ocelot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocelot-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ocelot-srv
            port:
              name: http
